--- a/packages.bib
+++ b/packages.bib
@@ -175,6 +175,14 @@ Tools},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
+@Manual{R-readxl,
+  title = {readxl: Read Excel Files},
+  author = {Hadley Wickham and Jennifer Bryan},
+  year = {2023},
+  note = {R package version 1.4.2},
+  url = {https://CRAN.R-project.org/package=readxl},
+}
+
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
